Add TLS support and allow updating Subnet entries
